// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`help text snapshots > formats contract emit help 1`] = `
"prisma-next emit → Emit your contract artifacts
│
│ --json                Output as JSON
│ -q, --quiet           Quiet mode: errors only
│ -v, --verbose         Verbose output: debug info, timings
│ --trace               Trace output: deep internals, stack traces
│ --color               Force color output
│ --no-color            Disable color output
│ --interactive         Force interactive mode
│ --no-interactive      Disable interactive prompts
│ -y, --yes             Auto-accept prompts
│ --config <path>       Path to prisma-next.config.ts
│
│ Examples:
│   $ prisma-next contract emit
│   $ prisma-next contract emit --config ./custom-config.ts
│
│ Reads your contract source (TypeScript or Prisma schema) and emits
│ contract.json and
│ contract.d.ts. The contract.json contains the canonical contract structure,
│ and
│ contract.d.ts provides TypeScript types for type-safe query building.
└
"
`;

exports[`help text snapshots > formats contract emit help with no color 1`] = `
"prisma-next emit → Emit your contract artifacts
│
│ --json                Output as JSON
│ -q, --quiet           Quiet mode: errors only
│ -v, --verbose         Verbose output: debug info, timings
│ --trace               Trace output: deep internals, stack traces
│ --color               Force color output
│ --no-color            Disable color output
│ --interactive         Force interactive mode
│ --no-interactive      Disable interactive prompts
│ -y, --yes             Auto-accept prompts
│ --config <path>       Path to prisma-next.config.ts
│
│ Examples:
│   $ prisma-next contract emit
│   $ prisma-next contract emit --config ./custom-config.ts
│
│ Reads your contract source (TypeScript or Prisma schema) and emits
│ contract.json and
│ contract.d.ts. The contract.json contains the canonical contract structure,
│ and
│ contract.d.ts provides TypeScript types for type-safe query building.
└
"
`;

exports[`help text snapshots > formats contract infer help 1`] = `
"prisma-next infer → Infer a PSL contract from the live database schema
│
│ --json                Output as JSON
│ -q, --quiet           Quiet mode: errors only
│ -v, --verbose         Verbose output: debug info, timings
│ --trace               Trace output: deep internals, stack traces
│ --color               Force color output
│ --no-color            Disable color output
│ --interactive         Force interactive mode
│ --no-interactive      Disable interactive prompts
│ -y, --yes             Auto-accept prompts
│ --db <url>            Database connection string
│ --config <path>       Path to prisma-next.config.ts
│ --output <path>       Write the inferred PSL contract to the specified path
│
│ Examples:
│   $ prisma-next contract infer --db $DATABASE_URL
│   $ prisma-next contract infer --db $DATABASE_URL --output ./prisma/contract.prisma
│   $ prisma-next contract infer --db $DATABASE_URL --json
│
│ Reads the live database schema and writes an inferred PSL contract to disk.
│ This command stops at \`contract.prisma\`; follow it with \`contract emit\` and
│ \`db sign\` as separate steps.
└
"
`;

exports[`help text snapshots > formats db schema help 1`] = `
"prisma-next schema → Inspect the live database schema
│
│ --json                Output as JSON
│ -q, --quiet           Quiet mode: errors only
│ -v, --verbose         Verbose output: debug info, timings
│ --trace               Trace output: deep internals, stack traces
│ --color               Force color output
│ --no-color            Disable color output
│ --interactive         Force interactive mode
│ --no-interactive      Disable interactive prompts
│ -y, --yes             Auto-accept prompts
│ --db <url>            Database connection string
│ --config <path>       Path to prisma-next.config.ts
│
│ Examples:
│   $ prisma-next db schema --db $DATABASE_URL
│   $ prisma-next db schema --db $DATABASE_URL --json
│   $ prisma-next db schema --db $DATABASE_URL --json > schema.json
│
│ Reads the live database schema and prints it as a tree by default or as JSON
│ with
│ --json. This command is always read-only and never writes files. To save
│ machine-
│ readable output, use shell redirection, for example \`prisma-next db schema
│ --json > schema.json\`.
└
"
`;

exports[`help text snapshots > formats db update help 1`] = `
"prisma-next update → Update your database schema to match your contract
│
│ --json                Output as JSON
│ -q, --quiet           Quiet mode: errors only
│ -v, --verbose         Verbose output: debug info, timings
│ --trace               Trace output: deep internals, stack traces
│ --color               Force color output
│ --no-color            Disable color output
│ --interactive         Force interactive mode
│ --no-interactive      Disable interactive prompts
│ -y, --yes             Auto-accept prompts
│ --db <url>            Database connection string
│ --config <path>       Path to prisma-next.config.ts
│ --dry-run             Preview planned operations without applying
│                       default: false
│
│ Examples:
│   $ prisma-next db update --db $DATABASE_URL
│   $ prisma-next db update --db $DATABASE_URL --dry-run
│
│ Compares your database schema to the emitted contract and applies the
│ necessary
│ changes. Works on any database, whether or not it has been initialized with
│ \`db init\`.
│ Destructive operations prompt for confirmation in interactive mode. Use -y to
│ auto-accept or --dry-run to preview first.
└
"
`;

exports[`help text snapshots > formats db verify help 1`] = `
"prisma-next verify → Check whether the database marker and live schema match your contract
│
│ --json                Output as JSON
│ -q, --quiet           Quiet mode: errors only
│ -v, --verbose         Verbose output: debug info, timings
│ --trace               Trace output: deep internals, stack traces
│ --color               Force color output
│ --no-color            Disable color output
│ --interactive         Force interactive mode
│ --no-interactive      Disable interactive prompts
│ -y, --yes             Auto-accept prompts
│ --db <url>            Database connection string
│ --config <path>       Path to prisma-next.config.ts
│ --marker-only         Skip schema verification and only check the database
│                       marker
│ --schema-only         Skip marker verification and only check whether the live
│                       schema satisfies the contract
│ --strict              Strict mode: schema elements not present in the contract
│                       are considered an error
│                       default: false
│
│ Examples:
│   $ prisma-next db verify --db $DATABASE_URL
│   $ prisma-next db verify --db $DATABASE_URL --strict
│   $ prisma-next db verify --db $DATABASE_URL --schema-only
│   $ prisma-next db verify --db $DATABASE_URL --schema-only --strict
│   $ prisma-next db verify --db $DATABASE_URL --marker-only
│   $ prisma-next db verify --db $DATABASE_URL --json
│
│ Verifies the database marker first, then checks the database schema matches
│ your contract.
│ Use \`--marker-only\` for marker-only verification, \`--schema-only\` to skip
│ marker checks and
│ inspect only the live schema, and \`--strict\` to fail if the database includes
│ elements
│ not present in the contract.
└
"
`;

exports[`help text snapshots > formats root help 1`] = `
"prisma-next Manage your data layer
│
│ ├─ contract         
│ │  ├─ emit            Emit your contract artifacts
│ │  └─ infer           Infer a PSL contract from the live database schema
│ └─ db               
│ │  ├─ schema          Inspect the live database schema
│    └─ verify          Check whether the database marker and live schema match your contract
│
│ Use Prisma Next to define your data layer as a contract. Sign your database
│ and application with the same contract to guarantee compatibility. Plan and
│ apply migrations to safely evolve your schema.
└
"
`;

exports[`help text snapshots > formats root help with no color 1`] = `
"prisma-next Manage your data layer
│
│ ├─ contract         
│ │  ├─ emit            Emit your contract artifacts
│ │  └─ infer           Infer a PSL contract from the live database schema
│ └─ db               
│ │  ├─ schema          Inspect the live database schema
│    └─ verify          Check whether the database marker and live schema match your contract
│
│ Use Prisma Next to define your data layer as a contract. Sign your database
│ and application with the same contract to guarantee compatibility. Plan and
│ apply migrations to safely evolve your schema.
└
"
`;
